--- a/package.json
+++ b/package.json
@@ -18,15 +18,27 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
+    "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.6.0",
+    "fs": "0.0.1-security",
+    "groq-sdk": "^0.19.0",
     "lucide-react": "^0.487.0",
     "motion": "^12.6.5",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.1.91",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
+    "tesseract.js": "^6.0.1",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
