--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.7.4",
     "fs": "0.0.1-security",
     "groq-sdk": "^0.19.0",
     "lucide-react": "^0.487.0",
@@ -36,6 +37,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "tesseract.js": "^6.0.1",
