--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "pdfjs-dist": "^5.1.91",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
