--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "utils/parsePDF.js", "utils/extractDetailswithGrok.ts", "src/app/api/resume-analysis/route.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "utils/parsePDF.js", "utils/extractDetailswithGrok.ts", "src/app/api/resume-analysis/route.ts", "next.config.mjs"],
   "exclude": ["node_modules"]
 }
